--- a/varya/style.css
+++ b/varya/style.css
@@ -2941,7 +2941,8 @@ nav a {
 	left: 0;
 	padding: calc(2* var(--global--spacing-unit) + var(--primary-nav--icon-size)) var(--global--spacing-unit) var(--global--spacing-horizontal);
 	background-color: var(--global--color-background);
-	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	z-index: 499;
 }
 
